--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <link rel="stylesheet" href="css/style.css" />
 
         <!-- js -->
-        <script src="js/main.js" defer></script>
+        <script type="module" src="js/main.js"></script>
     </head>
     <body>
         <h1>コーディングテンプレート</h1>
